# the-c-programming-language-second-edition

./: .astylerc  .editorconfig  .gitignore  CMakeLists.txt  README.adoc
chapter-1/: CMakeLists.txt
chapter-1/exercise-1-1/: CMakeLists.txt  README.adoc  hello_test.py
chapter-1/exercise-1-10/: CMakeLists.txt  README.adoc  replace_whitespace.c  replace_whitespace_test.py
chapter-1/exercise-1-11/: README.adoc
chapter-1/exercise-1-2/: CMakeLists.txt  README.adoc  escape.c  escape_test.py
chapter-1/exercise-1-3/: CMakeLists.txt  README.adoc  fahrenheit.c  fahrenheit_test.py
chapter-1/exercise-1-4/: CMakeLists.txt  README.adoc  celsius.c  celsius_test.py
chapter-1/exercise-1-5/: CMakeLists.txt  README.adoc  reverse_fahrenheit.c  reverse_fahrenheit_test.py
chapter-1/exercise-1-6/: CMakeLists.txt  README.adoc  eof.c  eof_test.py
chapter-1/exercise-1-7/: CMakeLists.txt  README.adoc  eof_value_test.py
chapter-1/exercise-1-8/: CMakeLists.txt  README.adoc  count_whitespace.c  count_whitespace_test.py
chapter-1/exercise-1-9/: CMakeLists.txt  README.adoc  copy_one_blank.c  copy_one_blank_test.py
